[Presentation API] reject request.start() with OperationError instead of UnknownError if previous start() is in progress

- add a new presentation error type: PREVIOUS_START_IN_PROGRESS
- PresentationServiceImpl returns PREVIOUS_START_IN_PROGRESS error instead of UNKNOWN error if previous start is in progress
- reject start() promise with OperationError if browser returns PREVIOUS_START_IN_PROGRESS error

BUG=669267

Review-Url: https://codereview.chromium.org/2647723002
Cr-Commit-Position: refs/heads/master@{#445920}

Former-commit-id: 42c0b54f957c23afbd3fba4058c3fcd4c5ae4041