third_party/WebKit/public/platform/modules/presentation/WebPresentationError.h
@@ -15,6 +15,7 @@ struct WebPresentationError {
     ErrorTypeSessionRequestCancelled,
     ErrorTypeNoPresentationFound,
     ErrorTypeAvailabilityNotSupported,
+    ErrorTypePreviousStartInProgress,
     ErrorTypeUnknown,
     ErrorTypeLast = ErrorTypeUnknown
   };
